[build-system]
requires = ["hatchling>=0.21.1",]
build-backend = "hatchling.build"

[project]
name = "Autolinker"
description = "Markdown Extension to automatically link certain words to specific links."
version = "1.0.0"
authors = [
    {name = "Andre_601"}
]
license = "MIT"

requires-python = ">=3.8"

dependencies = [
    "Markdown>=3.5"
]

[tool.hatch.build.targets.wheel]
include = ["/autolinker",]